fix: final working sounds fix